test/good/arrays/method02.px

print [true].all(), [true, false].all()
print [false].any(), [false, true].any()
