test/bad/tuple3.px

t = (false, true)
t.0 = true
